--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include README.rst
 recursive-include mistypes/static *
 recursive-include mistypes/templates *
 recursive-include mistypes/templatetags *
+recursive-include mistypes/locale *
